--- a/nxlog.conf
+++ b/nxlog.conf
@@ -55,7 +55,7 @@ SpoolDir  %ROOT%\data
 
 <Output graylog>
     Module	om_udp
-    Host	"insira o endereço ip do seu servidor"
+    Host	"Insira o IP do seu servidor Graylog aqui"
     Port	12201
     OutputType	GELF
 </Output>
